# examples

./: .bash_aliases  .gitignore  README.md
c++/boost/asio/: CMakeLists.txt  README.md  main.cpp
c++/boost/asio/timer1/: CMakeLists.txt  main.cpp
c++/boost/asio/timer2/: CMakeLists.txt  main.cpp
c++/boost/asio/timer3/: CMakeLists.txt  main.cpp
c++/boost/asio/timer4/: CMakeLists.txt  main.cpp
c++/tdd/c2/: CMakeLists.txt  SoundexTest.cpp  main.cpp
dds/: .classpath  .project  README_x64Win64VS2017.txt  Run ShapeTypeExtendedPublisher.launch  Run ShapeTypeExtendedSubscriber.launch  ShapeFillKind.java  ShapeFillKindSeq.java  ShapeFillKindTypeCode.java  ShapeFillKindTypeSupport.java  ShapeType.java  ShapeTypeDataReader.java  ShapeTypeDataWriter.java  ShapeTypeExtended.java  ShapeTypeExtendedDataReader.java  ShapeTypeExtendedDataWriter.java  ShapeTypeExtendedPublisher.java  ShapeTypeExtendedSeq.java  ShapeTypeExtendedSubscriber.java  ShapeTypeExtendedTypeCode.java  ShapeTypeExtendedTypeSupport.java  ShapeTypeSeq.java  ShapeTypeTypeCode.java  ShapeTypeTypeSupport.java  ShapesDemo.slx  USER_QOS_PROFILES.xml  build.xml  makefile_test_x64Win64VS2017  test.idl
dds/blockset/: ShapesDemo.sldd  ShapesDemo.slx  ShapesDemo.slxc
dds/compatibility_test/: .project  ArmMovementCommand.java  ArmMovementCommandDataReader.java  ArmMovementCommandSeq.java  ArmMovementCommandTypeCode.java  BrakeTestRemainingTimeTypeCode.java  CartPositionEnumSeq.java  CartPositionEnumTypeCode.java  (+65 more)
ffmpeg/: gtk_play_video.c
lisp/: README.md  conditionals.lisp  test.lisp  unittest.lisp
(+642 files in other folders)
